# rule/handler/rule.go
@@ -1,37 +1,0 @@
-// Code generated by protoc-gen-vkit.
-// versions:
-// - protoc-gen-vkit v1.0.0
-
-package handler
-
-import (
-	context "context"
-	pb "github.com/visonlv/iot-engine/rule/proto"
-)
-
-type RuleService struct {
-}
-
-func (the *RuleService) Add(ctx context.Context, req *pb.RuleAddReq, resp *pb.RuleAddResp) error {
-	return nil
-}
-
-func (the *RuleService) Del(ctx context.Context, req *pb.RuleDelReq, resp *pb.RuleDelResp) error {
-	return nil
-}
-
-func (the *RuleService) Update(ctx context.Context, req *pb.RuleUpdateReq, resp *pb.RuleUpdateResp) error {
-	return nil
-}
-
-func (the *RuleService) Get(ctx context.Context, req *pb.RuleGetReq, resp *pb.RuleGetResp) error {
-	return nil
-}
-
-func (the *RuleService) List(ctx context.Context, req *pb.RuleListReq, resp *pb.RuleListResp) error {
-	return nil
-}
-
-func (the *RuleService) Page(ctx context.Context, req *pb.RulePageReq, resp *pb.RulePageResp) error {
-	return nil
-}
