# rule/handler/zzconfig.go
@@ -1,53 +1,0 @@
-// Code generated by protoc-gen-vkit. DO NOT EDIT.
-// versions:
-// - protoc-gen-vkit v1.0.0
-
-package handler
-
-import (
-	"github.com/visonlv/go-vkit/grpcx"
-	
-)
-
-func GetList() []interface{} {
-	list := make([]interface{}, 0)
-	list = append(list, &RuleService{})
-	
-	return list
-}
-
-func GetApiEndpoint() []*grpcx.ApiEndpoint {
-	return []*grpcx.ApiEndpoint{
-		{
-			Method:"RuleService.Add",
-			Url:"/rpc/rule/RuleService.Add", 
-			ClientStream:false, 
-			ServerStream:false,
-		},{
-			Method:"RuleService.Del",
-			Url:"/rpc/rule/RuleService.Del", 
-			ClientStream:false, 
-			ServerStream:false,
-		},{
-			Method:"RuleService.Update",
-			Url:"/rpc/rule/RuleService.Update", 
-			ClientStream:false, 
-			ServerStream:false,
-		},{
-			Method:"RuleService.Get",
-			Url:"/rpc/rule/RuleService.Get", 
-			ClientStream:false, 
-			ServerStream:false,
-		},{
-			Method:"RuleService.List",
-			Url:"/rpc/rule/RuleService.List", 
-			ClientStream:false, 
-			ServerStream:false,
-		},{
-			Method:"RuleService.Page",
-			Url:"/rpc/rule/RuleService.Page", 
-			ClientStream:false, 
-			ServerStream:false,
-		},
-	}
-}
