# thing/proto/thing.swagger.json
@@ -13,6 +13,9 @@
     },
     {
       "name": "ProductModelService"
+    },
+    {
+      "name": "RuleService"
     }
   ],
   "consumes": [
@@ -640,6 +643,168 @@
         ],
         "tags": [
           "ProductService"
+        ]
+      }
+    },
+    "/rpc/thing/RuleService.Add": {
+      "post": {
+        "summary": "规则创建",
+        "operationId": "RuleService_Add",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/protoRuleAddResp"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/protoRuleAddReq"
+            }
+          }
+        ],
+        "tags": [
+          "RuleService"
+        ]
+      }
+    },
+    "/rpc/thing/RuleService.Del": {
+      "post": {
+        "summary": "规则删除",
+        "operationId": "RuleService_Del",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/protoRuleDelResp"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/protoRuleDelReq"
+            }
+          }
+        ],
+        "tags": [
+          "RuleService"
+        ]
+      }
+    },
+    "/rpc/thing/RuleService.Get": {
+      "post": {
+        "summary": "规则获取",
+        "operationId": "RuleService_Get",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/protoRuleGetResp"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/protoRuleGetReq"
+            }
+          }
+        ],
+        "tags": [
+          "RuleService"
+        ]
+      }
+    },
+    "/rpc/thing/RuleService.List": {
+      "post": {
+        "summary": "规则列表",
+        "operationId": "RuleService_List",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/protoRuleListResp"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/protoRuleListReq"
+            }
+          }
+        ],
+        "tags": [
+          "RuleService"
+        ]
+      }
+    },
+    "/rpc/thing/RuleService.Page": {
+      "post": {
+        "summary": "规则分页",
+        "operationId": "RuleService_Page",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/protoRulePageResp"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/protoRulePageReq"
+            }
+          }
+        ],
+        "tags": [
+          "RuleService"
+        ]
+      }
+    },
+    "/rpc/thing/RuleService.Update": {
+      "post": {
+        "summary": "规则修改",
+        "operationId": "RuleService_Update",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/protoRuleUpdateResp"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/protoRuleUpdateReq"
+            }
+          }
+        ],
+        "tags": [
+          "RuleService"
         ]
       }
     }
@@ -1691,6 +1856,262 @@
         }
       },
       "title": "产品修改返回结果"
+    },
+    "protoRule": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "string",
+          "title": "规则id"
+        },
+        "name": {
+          "type": "string",
+          "title": "规则名称"
+        },
+        "trigger_type": {
+          "type": "string",
+          "title": "触发类型"
+        },
+        "trigger": {
+          "type": "string",
+          "title": "触发元数据"
+        },
+        "action": {
+          "type": "string",
+          "title": "动作元数据"
+        },
+        "desc": {
+          "type": "string",
+          "title": "描述"
+        },
+        "create_time": {
+          "type": "string",
+          "format": "int64",
+          "title": "创建时间"
+        }
+      }
+    },
+    "protoRuleAddReq": {
+      "type": "object",
+      "properties": {
+        "name": {
+          "type": "string",
+          "title": "规则名称"
+        },
+        "trigger_type": {
+          "type": "string",
+          "title": "触发类型"
+        },
+        "trigger": {
+          "type": "string",
+          "title": "触发元数据"
+        },
+        "action": {
+          "type": "string",
+          "title": "动作元数据"
+        },
+        "desc": {
+          "type": "string",
+          "title": "描述"
+        }
+      },
+      "title": "规则创建请求参数"
+    },
+    "protoRuleAddResp": {
+      "type": "object",
+      "properties": {
+        "code": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "msg": {
+          "type": "string"
+        },
+        "id": {
+          "type": "string"
+        }
+      },
+      "title": "规则创建返回结果"
+    },
+    "protoRuleDelReq": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "string",
+          "title": "规则id"
+        }
+      },
+      "title": "规则删除请求参数"
+    },
+    "protoRuleDelResp": {
+      "type": "object",
+      "properties": {
+        "code": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "msg": {
+          "type": "string"
+        },
+        "id": {
+          "type": "string"
+        }
+      },
+      "title": "规则删除返回结果"
+    },
+    "protoRuleGetReq": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "string",
+          "title": "规则id"
+        }
+      },
+      "title": "规则获取请求参数"
+    },
+    "protoRuleGetResp": {
+      "type": "object",
+      "properties": {
+        "code": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "msg": {
+          "type": "string"
+        },
+        "item": {
+          "$ref": "#/definitions/protoRule"
+        }
+      },
+      "title": "规则获取返回结果"
+    },
+    "protoRuleListReq": {
+      "type": "object",
+      "properties": {
+        "name": {
+          "type": "string",
+          "title": "规则名称"
+        },
+        "trigger_type": {
+          "type": "string",
+          "title": "触发类型"
+        }
+      },
+      "title": "规则列表请求参数"
+    },
+    "protoRuleListResp": {
+      "type": "object",
+      "properties": {
+        "code": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "msg": {
+          "type": "string"
+        },
+        "items": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/protoRule"
+          }
+        }
+      },
+      "title": "规则列表返回结果"
+    },
+    "protoRulePageReq": {
+      "type": "object",
+      "properties": {
+        "page_index": {
+          "type": "integer",
+          "format": "int32",
+          "title": "第几页，从1开始"
+        },
+        "page_size": {
+          "type": "integer",
+          "format": "int32",
+          "title": "每页多少条"
+        },
+        "name": {
+          "type": "string",
+          "title": "规则名称"
+        },
+        "trigger_type": {
+          "type": "string",
+          "title": "触发类型"
+        }
+      },
+      "title": "规则分页请求参数"
+    },
+    "protoRulePageResp": {
+      "type": "object",
+      "properties": {
+        "code": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "msg": {
+          "type": "string"
+        },
+        "total": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "items": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/protoRule"
+          }
+        }
+      },
+      "title": "规则分页返回结果"
+    },
+    "protoRuleUpdateReq": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "string",
+          "title": "规则id"
+        },
+        "name": {
+          "type": "string",
+          "title": "规则名称"
+        },
+        "trigger_type": {
+          "type": "string",
+          "title": "触发类型"
+        },
+        "trigger": {
+          "type": "string",
+          "title": "触发元数据"
+        },
+        "action": {
+          "type": "string",
+          "title": "动作元数据"
+        },
+        "desc": {
+          "type": "string",
+          "title": "描述"
+        }
+      },
+      "title": "规则修改请求参数"
+    },
+    "protoRuleUpdateResp": {
+      "type": "object",
+      "properties": {
+        "code": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "msg": {
+          "type": "string"
+        },
+        "id": {
+          "type": "string"
+        }
+      },
+      "title": "规则修改返回结果"
     }
   }
 }
